--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>davejenej</title>
+    <title>Eco | ekonomika a ekologie hrou</title>
 </head>
 <body>
-<h1>David Štencel</h1>
+<p>projekt2</p>
 </body>
 </html>
