--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Stránka se bude věnocat projektu 2">
+    <meta name="keywords" content="eco, game, hra, ekonomie">
     <title>Eco | ekonomika a ekologie hrou</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<p>projekt2</p>
+
+<nav id="navbar">
+    <div id="logo"><a href="index.html">Titulní <span class="text-primary">stránka</span></a></div>
+    <ul>
+        <li><a href="#home">Úvod</a></li>
+        <li><a href="#about">O nás</a></li>
+        <li><a href="#project">Projekt</a></li>
+        <li><a href="#contact">Kontakt</a></li>
+    </ul>
+</nav>
+
+
 </body>
 </html>
