--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Stránka se bude věnocat projektu 2">
     <meta name="keywords" content="eco, game, hra, ekonomie">
     <title>Eco | ekonomika a ekologie hrou</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
