--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -8,13 +8,15 @@
     <title>Eco | ekonomika a ekologie hrou</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
 <nav id="navbar">
-    <div id="logo"><a href="index.html">Titulní <span class="text-primary">stránka</span></a></div>
+    <div id="logo"> <span class="text-primary"></span>
+        <text-primary><i class="fa-solid fa-leaf"></i></text-primary><a href="index.html">Titulní <span class="text-primary">stránka</span></a></div>
     <ul>
         <li><a href="#home">Úvod</a></li>
         <li><a href="#about">O nás</a></li>
