--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -14,7 +14,7 @@
 </head>
 <body id="home">
 <nav id="navbar">
-    <div id="logo"><span class="text-primary"><i class="fa-solid fa-person-rifle"></i></i></i></span><a href="index.html">The
+    <div id="logo"><span class="text-primary"><i class="fa-solid fa-person-rifle"></i></span><a href="index.html">The
         <span class="text-primary">MAFIA</span> series</a></div>
     <ul>
         <li><a href="#home">Úvod</a></li>
