--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>MAFIA | Česká legendární videoherní série</title>
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/1427/1427397.png">
 </head>
 <body id="home">
 <nav id="navbar">
