--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -37,7 +37,7 @@
 <section id="#what" class="bg-light py-1">
     <div class="container">
         <h2 class="m-heading text-center">
-            <span class="text-primary">O čem</span> je hra?
+            <span class="text-primary">Hlavní</span> věci ve hře
         </h2>
         <div class="items">
             <div class="item">
