--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -25,9 +25,9 @@
 </nav>
 <div id="showcase">
     <div class="showcase-content">
-        <h1 class="l-heading">Máme rádi videoherní sérii <span class="text-primary">MAFIA.</span></h1>
+        <h1 class="l-heading">Mám rád videoherní sérii <span class="text-primary">MAFIA.</span></h1>
         <p class="lead">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, hysteria.
+            Mafia 2 je akční hra z mafiánského prostředí, vyvíjená českým vývojářským týmem 2K Czech.
         </p>
         <a href="#what" class="btn">Dozvědět se o <span class="text-secondary">MAFII</span> více</a>
     </div>
