--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -27,7 +27,7 @@
     <div class="showcase-content">
         <h1 class="l-heading">Mám rád videoherní sérii <span class="text-primary">MAFIA.</span></h1>
         <p class="lead">
-            Mafia 2 je akční hra z mafiánského prostředí, vyvíjená českým vývojářským týmem 2K Czech.
+            Mafia 2 je akční hra z mafiánského prostředí, vyvíjena českým vývojářským týmem 2K Czech.
         </p>
         <a href="#what" class="btn">Dozvědět se o <span class="text-secondary">MAFII</span> více</a>
     </div>
