--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -7,20 +7,23 @@
     <meta name="keywords" content="mafia, hra, game">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>MAFIA | Česká legendární videoherní série</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/1427/1427397.png">
 </head>
 <body id="home">
+
 <nav id="navbar">
     <div id="logo"><span class="text-primary"><i class="fa-solid fa-person-rifle"></i></span><a href="index.html">The
         <span class="text-primary">MAFIA</span> series</a></div>
     <ul>
         <li><a href="#home">Úvod</a></li>
-        <li><a href="#aboutgame">O hře</a></li>
-        <li><a href="#contact">Kontakt</a></li>
+        <!-- <li><a href="#aboutgame">O hře</a></li>
+        <li><a href="#contact">Kontakt</a></li> -->
     </ul>
 </nav>
 <div id="showcase">
@@ -34,26 +37,39 @@
 </div>
 
 <!-- Section: O hře-->
-<section id="#what" class="bg-light py-1">
+<section id="what" class="bg-light py-1">
     <div class="container">
         <h2 class="m-heading text-center">
-            <span class="text-primary">Hlavní</span> věci ve hře
-        </h2>
-        <div class="items">
-            <div class="item">
-                <i class="fa-solid fa-hat-cowboy-side fa-2x"></i>
-                <div>
-                    <h3>Mafiánské prostředí</h3>
-                    <i class="fa-sharp fa-solid fa-city fa-2x"></i>
-                    <h3>Nádherné Empire Bay</h3>
-                    <i class="fa-solid fa-clock fa-2x"></i>
-                    <h3>40. a 50. léta minulého století</h3>
-                </div>
+            <span class="text-primary">Hlavní</span> věci ve hře:
+        </h2></div>
+    <div class="items">
+        <div class="item">
+            <i class="fa-solid fa-hat-cowboy-side fa-2x"></i>
+            <div>
+                <h3>Mafiánské prostředí</h3>
+                <p>plné <span class="text-primary">akce</span> a <span class="text-primary">přestřelek!</span></p>
+                <p>Vždy musíte být ve střehu a dávat si pozor na policii a
+                    ostatní gangstery, abyste vyvázli bez zranění!</p>
+            </div>
+        </div>
+        <div class="item">
+            <i class="fa-sharp fa-solid fa-city fa-2x"></i>
+            <div>
+                <h3>Nádherné město</h3>
+                <p><span class="text-primary">Empire</span> Bay.</p>
+                <p>Krásné, elegantní. Tak by se dalo popsat malebné městečko Empire Bay.</p>
+            </div>
+        </div>
+        <div class="item">
+            <i class="fa-solid fa-clock fa-2x"></i>
+            <div>
+                <h3>Odehrávání děje</h3>
+                <p>ve <span class="text-primary">40. </span>a <span class="text-primary">50. </span>letech minulého
+                    století!</p>
+                <p>Zažijte nefalšovanou mafiánskou akci! Vše máte na dosah myši a ani se při hraní příliš nenadřete.</p>
             </div>
         </div>
     </div>
 </section>
-
-
 </body>
 </html>
