--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -22,8 +22,8 @@
         <span class="text-primary">MAFIA</span> series</a></div>
     <ul>
         <li><a href="#home">Úvod</a></li>
-        <!-- <li><a href="#aboutgame">O hře</a></li>
-        <li><a href="#contact">Kontakt</a></li> -->
+        <li><a href="#aboutgame">O hře</a></li>
+        <li><a href="#contact">Kontakt</a></li>
     </ul>
 </nav>
 <div id="showcase">
@@ -40,7 +40,7 @@
 <section id="what" class="bg-light py-1">
     <div class="container">
         <h2 class="m-heading text-center">
-            <span class="text-primary">Hlavní</span> věci ve hře:
+            <span class="text-primary">Hlavní</span> věci ve hře
         </h2></div>
     <div class="items">
         <div class="item">
