--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -71,5 +71,27 @@
         </div>
     </div>
 </section>
+
+<section id="aboutgame">
+    <div class="aboutgame-img"></div>
+    <div class="aboutgame-text bg-dark p-2">
+        <h2 class="m-heading">Vývojářský <span class="text-primary">tým</span></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos ex fuga laboriosam porro, qui quo. In
+            ipsam molestias quod reprehenderit.</p>
+        <h3>Jmenný seznam autorů</h3>
+        <ul class="list">
+            <li>položka1</li>
+            <li>položka2</li>
+            <li>položka3</li>
+        </ul>
+    </div>
+</section>
+
+<footer id="main-footer" class="bg-dark text-center py-1">
+    <div class="container">
+        <p>copyright - davejenej</p>
+    </div>
+</footer>
+
 </body>
 </html>
