--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -75,14 +75,13 @@
 <section id="aboutgame">
     <div class="aboutgame-img"></div>
     <div class="aboutgame-text bg-dark p-2">
-        <h2 class="m-heading">Vývojářský <span class="text-primary">tým</span></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos ex fuga laboriosam porro, qui quo. In
-            ipsam molestias quod reprehenderit.</p>
+        <h2 class="m-heading">Vývojářský <span class="text-primary">tým,</span></h2>
+        <p>bez kterých by tato hra nevznikla.</p>
         <h3>Jmenný seznam autorů</h3>
         <ul class="list">
-            <li>položka1</li>
-            <li>položka2</li>
-            <li>položka3</li>
+            <li>Daniel Vávra</li>
+            <li>Lukáš Kuře</li>
+            <li>Roman Hladík</li>
         </ul>
     </div>
 </section>
