--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -72,7 +72,7 @@
     </div>
 </section>
 
-<section id="aboutgame">
+<section id="aboutgame" class="py-1">
     <div class="aboutgame-img"></div>
     <div class="aboutgame-text bg-dark p-2">
         <h2 class="m-heading">Vývojářský <span class="text-primary">tým,</span></h2>
@@ -85,6 +85,70 @@
         </ul>
     </div>
 </section>
+<section id="images">
+    <div class="container">
+        <h2 class="m-heading text-center">Ilustrační <span class="text-primary">obrázky</span></h2>
+        <div class="items py-1">
+            <div><img src="https://source.unsplash.com/random/180x300/?mafia" alt="Ilustrační obrázek"></div>
+            <div><img src="https://source.unsplash.com/random/180x300/?game" alt="Ilustrační obrázek"></div>
+            <div><img src="https://source.unsplash.com/random/180x300/?computer" alt="Ilustrační obrázek"></div>
+            <div><img src="https://source.unsplash.com/random/180x300/?car" alt="Ilustrační obrázek"></div>
+            <div><img src="https://source.unsplash.com/random/180x300/?musclecar" alt="Ilustrační obrázek"></div>
+        </div>
+    </div>
+</section>
+
+<section id="contact">
+    <div class="contact-form bg-primary p-2">
+        <h2 class="m-heading">Napište nám</h2>
+        <p>Prosím využijte níže uvedený formulář.</p>
+        <form>
+            <div class="form-group">
+                <label for="name">Jméno</label>
+                <input type="text"
+                       name="name"
+                       id="name"
+                       placeholder="John Doe">
+            </div>
+
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text"
+                       name="email"
+                       id="email"
+                       placeholder="john@doe.com">
+            </div>
+
+            <div class="form-group">
+                <label for="phone">Telefon</label>
+                <input type="text"
+                       name="phone"
+                       id="phone"
+                       placeholder="725 356 852">
+            </div>
+
+            <div class="form-group">
+                <label for="name">Zpráva</label>
+                <textarea name="" id="" cols="30" rows="10"
+                          placeholder="lorem ipsum"></textarea>
+
+            </div>
+        </form>
+    </div>
+    <div class="contact-adress bg-dark p-2">
+        <h2 class="m-heading">Kontakt</h2>
+        <h3>Adresa sídla 2K Czech</h3>
+        <ul class="list">
+            <li>p1</li>
+            <li>p5</li>
+            <li>p2</li>
+        </ul>
+        <h3>Email</h3>
+        <ul class="list"></ul>
+        <li>email</li>
+        </ul>
+    </div>
+</section>
 
 <footer id="main-footer" class="bg-dark text-center py-1">
     <div class="container">
@@ -92,7 +156,9 @@
     </div>
 </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
 
 
@@ -109,12 +175,11 @@
     })
 
 
-
     // Navigation active state on scroll
     var nav_sections = $('section');
     var main_nav = $('#navbar li, .mobile-nav');
 
-    $(window).on('scroll', function() {
+    $(window).on('scroll', function () {
 
         var cur_pos = $(this).scrollTop() + 200;
 
@@ -122,13 +187,12 @@
         if (cur_pos > 350) {
             document.querySelector('#navbar').style.opacity = 0.8;
             document.querySelector('#showcase .source').style.display = "none";
-        }
-        else {
+        } else {
             document.querySelector('#navbar').style.opacity = 1;
             document.querySelector('#showcase .source').style.display = "block";
         }
 
-        nav_sections.each(function() {
+        nav_sections.each(function () {
             var top = $(this).offset().top,
                 bottom = top + $(this).outerHeight();
 
