--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -100,7 +100,7 @@
 
 <section id="contact">
     <div class="contact-form bg-primary p-2">
-        <h2 class="m-heading">Napište nám</h2>
+        <h2 class="m-heading">Napište <span class="text-white">nám</span></h2>
         <p>Prosím využijte níže uvedený formulář.</p>
         <form>
             <div class="form-group">
@@ -139,13 +139,13 @@
         <h2 class="m-heading">Kontakt</h2>
         <h3>Adresa sídla 2K Czech</h3>
         <ul class="list">
-            <li>p1</li>
-            <li>p5</li>
-            <li>p2</li>
+            <li>Tuřanka 115</li>
+            <li>Brno</li>
+            <li>627 00 Slatina</li>
         </ul>
-        <h3>Email</h3>
+        <h3>Telefon</h3>
         <ul class="list"></ul>
-        <li>email</li>
+        <li>532 199 311</li>
         </ul>
     </div>
 </section>
