--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -12,6 +12,8 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/widescreen.css" media="screen and (min-width: 1100px)">
+    <link rel="stylesheet" href="./css/mobile.css" media="screen and (max-width: 768px)">
     <title>MAFIA | Česká legendární videoherní série</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/1427/1427397.png">
 </head>
