--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -133,6 +133,7 @@
                 <label for="name">Zpráva</label>
                 <textarea name="" id="" cols="30" rows="10"
                           placeholder="lorem ipsum"></textarea>
+                <button type="submit" class="btn-odeslat">Odeslat</button>
 
             </div>
         </form>
@@ -187,11 +188,11 @@
 
 
         if (cur_pos > 350) {
-            document.querySelector('#navbar').style.opacity = 0.8;
-            document.querySelector('#showcase .source').style.display = "none";
+            document.querySelector('#navbar').style.opacity = 0.9;
+            // document.querySelector('#showcase .source').style.display = "none";
         } else {
             document.querySelector('#navbar').style.opacity = 1;
-            document.querySelector('#showcase .source').style.display = "block";
+            // document.querySelector('#showcase .source').style.display = "block";
         }
 
         nav_sections.each(function () {
