--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -22,6 +22,7 @@
 <nav id="navbar">
     <div id="logo"><span class="text-primary"><i class="fa-solid fa-person-rifle"></i></span><a href="index.html">The
         <span class="text-primary">MAFIA</span> series</a></div>
+    <a href="#" class="icon"><i class="fa fa-bars 2x"></i></a>
     <ul>
         <li><a href="#home">Úvod</a></li>
         <li><a href="#aboutgame">O hře</a></li>
