--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -160,43 +160,50 @@
     </div>
 </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
-        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-
-
+    $('#navbar #hambac').click(function (){
+        $('#navbar ul').slideToggle("slow")
+    });
+    if($(window).width()<501){
+        $('#navbar ul').click(function (){
+            $('#navbar ul').hide();
+        });
+    }
     $('#navbar a, .btn').on('click', function (event) {
         if (this.hash !== '') {
             event.preventDefault();
             const hash = this.hash;
             $('html, body').animate(
                 {
-                    scrollTop: $(hash).offset().top - 100
+                    scrollTop: $(hash).offset().top - 260
                 }, 800
             )
         }
     })
 
 
+
     // Navigation active state on scroll
     var nav_sections = $('section');
     var main_nav = $('#navbar li, .mobile-nav');
 
-    $(window).on('scroll', function () {
+    $(window).on('scroll', function() {
 
         var cur_pos = $(this).scrollTop() + 200;
 
 
-        if (cur_pos > 350) {
-            document.querySelector('#navbar').style.opacity = 0.9;
-            // document.querySelector('#showcase .source').style.display = "none";
-        } else {
-            document.querySelector('#navbar').style.opacity = 1;
-            // document.querySelector('#showcase .source').style.display = "block";
-        }
 
-        nav_sections.each(function () {
+        //if (cur_pos > 350) {
+        //document.querySelector('#navbar').style.opacity = 0.9;
+        // document.querySelector('#showcase .source').style.display = "none";
+        //}
+        //else {
+        //document.querySelector('#navbar').style.opacity = 1;
+        // document.querySelector('#showcase .source').style.display = "block";
+        // }
+
+        nav_sections.each(function() {
             var top = $(this).offset().top,
                 bottom = top + $(this).outerHeight();
 
