--- a/projekt2/index.html
+++ b/projekt2/index.html
@@ -132,8 +132,8 @@
 
             <div class="form-group">
                 <label for="name">Zpráva</label>
-                <textarea name="" id="" cols="30" rows="10"
-                          placeholder="lorem ipsum"></textarea>
+                <label for=""></label><textarea name="" id="" cols="30" rows="10"
+                                                placeholder="lorem ipsum"></textarea>
                 <button type="submit" class="btn-odeslat">Odeslat</button>
 
             </div>
@@ -150,7 +150,6 @@
         <h3>Telefon</h3>
         <ul class="list"></ul>
         <li>532 199 311</li>
-        </ul>
     </div>
 </section>
 
@@ -160,31 +159,22 @@
     </div>
 </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-    $('#navbar #hambac').click(function (){
-        $('#navbar ul').slideToggle("slow")
-    });
-    if($(window).width()<501){
-        $('#navbar ul').click(function (){
-            $('#navbar ul').hide();
-        });
-    }
+    // Smooth scrolling
     $('#navbar a, .btn').on('click', function (event) {
         if (this.hash !== '') {
             event.preventDefault();
             const hash = this.hash;
             $('html, body').animate(
                 {
-                    scrollTop: $(hash).offset().top - 260
+                    scrollTop: $(hash).offset().top - 100
                 }, 800
             )
         }
     })
 
 
-
-    // Navigation active state on scroll
     var nav_sections = $('section');
     var main_nav = $('#navbar li, .mobile-nav');
 
@@ -192,16 +182,18 @@
 
         var cur_pos = $(this).scrollTop() + 200;
 
+        // Menu Opacity on scrolling and hidding source
 
+        if (cur_pos > 350) {
+            document.querySelector('#navbar').style.opacity = 0.9;
+            //document.querySelector('#showcase .source').style.display = "none";
+        }
+        else {
+            document.querySelector('#navbar').style.opacity = 1;
+            //document.querySelector('#showcase .source').style.display = "block";
+        }
 
-        //if (cur_pos > 350) {
-        //document.querySelector('#navbar').style.opacity = 0.9;
-        // document.querySelector('#showcase .source').style.display = "none";
-        //}
-        //else {
-        //document.querySelector('#navbar').style.opacity = 1;
-        // document.querySelector('#showcase .source').style.display = "block";
-        // }
+        // Navigation active state on scroll
 
         nav_sections.each(function() {
             var top = $(this).offset().top,
@@ -218,10 +210,7 @@
                 $("#navbar ul li a").removeClass('active');
             }
         });
-
-
     });
-
 </script>
 </body>
 </html>
