--- a/searchbar/images.html
+++ b/searchbar/images.html
@@ -5,11 +5,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="./css/style.css">
-    <title>Google search page by davejenej</title>
+    <title>Google image search</title>
 </head>
 
 <body>
-
 <nav id="navbar">
     <ul>
         <li>
@@ -29,13 +28,13 @@
         <div class="logo">
             <img src="./img/google.png" alt="Google logo">
         </div>
-        <form action="https://www.google.com/search" name="f">
+        <form action="https://images.google.com/images" name="f">
             <div class="search">
-                <input type="text" name="as_q" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
+                <input type="text" name="as_q" autocomplete="off" autocorrect="off" autocapitalize="off"
+                       spellcheck="false">
             </div>
             <div class="btn">
                 <input type="submit" value="Search">
-                <input type="submit" value="I´m feeling lucky">
             </div>
         </form>
     </div>
