--- a/searchbar/images.html
+++ b/searchbar/images.html
@@ -6,6 +6,7 @@
           content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="./css/style.css">
     <title>Google image search</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
 </head>
 
 <body>
