Dokončeno + přidán favicon.

--- a/searchbar/advanced.html
+++ b/searchbar/advanced.html
@@ -36,12 +36,12 @@
                        spellcheck="false">
             </div>
             <div class="search text">
-                <p>Přesně toto slovo:</p>
+                <p>Toto přesné slovo nebo fráze:</p>
                 <input type="text" name="as_epq" autocomplete="off" autocorrect="off" autocapitalize="off"
                        spellcheck="false">
             </div>
             <div class="search text">
-                <p>Kterékoliv z těchto slov:</p>
+                <p>Kterékoli z těchto slov:</p>
                 <input type="text" name="as_oq" autocomplete="off" autocorrect="off" autocapitalize="off"
                        spellcheck="false">
             </div>
