--- a/vyuka/02_hello.html
+++ b/vyuka/02_hello.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
-    <title>Counter</title>
+    <title>Hello</title>
     <script>            counter= counter + 1;
 
-    document.addEventListener("DOMContentLoaded", function (){
+    document.addEventListener("DOMContentLoaded", function () {
+        document.querySelector('form').onsubmit = function () {
+            const name = document.querySelector('#name').value;
+            document.querySelector('h1').innerHTML = name;
+            alert(`Hello, ${name}`);
+
+        }
 
     });
 
