--- a/freecodecamp/tribute-page-odevzdani-mix-zdroju/index.html
+++ b/freecodecamp/tribute-page-odevzdani-mix-zdroju/index.html
@@ -1,20 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="cs">
 <head>
-  <title>Tribute Page</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To do list by davejenej</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <main id="main">
-  <h1 id="title">Dr. Norman Borlaug</h1>
-  <div id="img-div">
-    <img id="image" src="https://cdn.britannica.com/50/136250-050-1673FCF0/Norman-Borlaug-1970.jpg" alt="Picture of Dr. Norman Borlaug">
-    <div id="img-caption">Dr. Norman Borlaug, recipient of the Nobel Peace Prize</p>
+    <h1 id="title">Alexander Fleming</h1>
+    <p>Muž, který zachránil spousty životů.</p>
+    <figure id="img-div">
+        <img id="image"
+             src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Synthetic_Production_of_Penicillin_TR1468.jpg/800px-Synthetic_Production_of_Penicillin_TR1468.jpg"
+             alt="Obrázek Alexandera Fleminga" width="500px" height="600px">
+        <figcaption id="img-caption">
+            Obrázek Alexandera Fleminga
+        </figcaption>
+    </figure>
+    <div id="tribute-info">Sir Alexander Fleming byl skotský lékař známý objevem baktericidních účinků lysozymu, ale
+        hlavně získáním penicilinu z
+        plísně Penicillium notatum.
     </div>
-    <div id="tribute-info">
-      <p>Dr. Norman Borlaug was a plant scientist and humanitarian who is credited with saving over a billion lives by his work in developing high-yield, disease-resistant wheat varieties. He is also known as the "Father of the Green Revolution" for his contributions to agriculture and food security.</p>
-    </div>
-    <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Learn more about Dr. Norman Borlaug</a>
-  </div>
+    <section id="tribute-info">
+        <h3 id="headline">Timeline života Alexandera Fleminga:</h3>
+        <ul>
+            <li><strong>6.8.1881</strong> - Narozen na statku Lochfield farm v hrabství Ayrshir ve Skotsku</li>
+            <li>
+                <strong>1893</strong> - Ukončil darvelskou školu
+            </li>
+            <li>
+                <strong>1893</strong> - Nastoupil na akademii v Klimanrocku v hrabství Ayrshir
+            </li>
+            <li>
+                <strong>1895</strong> - Byl poslán do Londýna za svými sourozenci
+            </li>
+            <li>
+                <strong>1899</strong> - Vypukla Druhá búrská válka. Fleming spolu se svými bratry vstoupil jako
+                dobrovolník
+                do armády.
+            </li>
+            <li>
+                <strong>1901</strong> - Zdědil po strýci 250 liber. Ty pak, na radu svého staršího bratra, investoval do
+                studia medicíny
+            </li>
+            <li>
+                <strong>1902</strong> - Složil imatrikulační zkoušku
+            </li>
+            <li>
+                <strong>1908</strong> - Fleming složil závěrečné lékařské zkoušky, jako nejlepší z ročníku, za
+                což dostal zlatou medaili londýnské univerzity
+            </li>
+            <li>
+                <strong>1928</strong> - Alexander Fleming objevil penicilin
+            </li>
+        </ul>
+        <blockquote
+                cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm"
+        >
+            <p>
+                "„When I woke up just after dawn on September 28, 1928, I certainly didn’t plan to revolutionize all medicine by discovering the world’s first antibiotic, or bacteria killer, … But I guess that was exactly what I did.“ "
+            </p>
+            <cite>- Alexander Fleming</cite>
+        </blockquote>
+        <h3>
+            Zjistěte více o Alexandru Flemingovi
+            <a id="tribute-link" href="https://cs.wikipedia.org/wiki/Alexander_Fleming" target="_blank"</a>
+            >.
+        </h3>
+    </section>
+</main>
 </body>
 </html>
