--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -56,6 +56,6 @@
     </div>
     <a id="tribute-link" href="https://cs.wikipedia.org/wiki/Alexander_Fleming" target="_blank">Zjistěte více o
         Alexandru Flemingovi</a>
-    </div>
+    </main>
 </body>
 </html>
