--- a/todolist/index.html
+++ b/todolist/index.html
@@ -2,10 +2,29 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To do list by davejenej</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>To-Do List</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
+<div id="myDIV" class="header">
+    <h2>To Do LIST</h2>
+    <div class="container">
+        <input type="text" id="myInput" placeholder="Název úkolu...">
+        <span id="addBtn">Přidat úkol</span>
+    </div>
+</div>
+
+<ul id="myUL">
+
+</ul>
+
+<div id="error">CHYBA: prázdný úkol!</div>
 
 </body>
 </html>
