--- a/freecodecamp/personalportfolio/index.html
+++ b/freecodecamp/personalportfolio/index.html
@@ -1,34 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"/>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>My Personal Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<header>
-    <nav id="navbar">
-        <ul>
-            <li><a href="#welcome-section">Welcome</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#profile-link" target="_blank">Profile</a></li>
-        </ul>
-    </nav>
-</header>
+<nav id="navbar" class="nav">
+    <ul class="nav-list">
+        <li>
+            <a href="#welcome-section">Introduction</a>
+        </li>
+        <li>
+            <a href="#projects">Projects</a>
+        </li>
+        <li>
+            <a href="#contact">Contact</a>
+        </li>
+    </ul>
+</nav>
+
 <section id="welcome-section">
-    <h1>Welcome to my Portfolio</h1>
+    <h1>Hi, I am David</h1>
+    <a>an IT specialist</a>
 </section>
+
 <section id="projects">
+    <h2>My Projects</h2>
     <div class="project-tile">
-        <h2>Project 1</h2>
-        <p>Description of project 1</p>
-        <a href="project1.html">View project</a>
+        <h3>Project 2 - Mafia webpage</h3>
+        <p>Webpage about Czech Mafia 2 videogame.</p>
+        <a href="davejenej.github.io/projekt2/">View Project</a>
+    </div>
+    <div class="project-tile">
+        <h3>To Do list</h3>
+        <p>Google Tasks from AliExpress.</p>
+        <a href="https://davejenej.github.io/todolist/">View Project</a>
+    </div>
+    <div class="project-tile">
+        <h3>Search bar</h3>
+        <p>Fake google search bar.</p>
+        <a href="https://davejenej.github.io/searchbar/">View Project</a>
     </div>
 </section>
+
+<section id="contact" class="contact-section">
+    <div class="contact-section-header">
+        <h4>Contact me</h4>
+    </div>
+    <div class="contact-links">
+        <a
+                href="https://facebook.com/davejenej"
+                target="_blank"
+                class="btn contact-details"
+        ><i class="fab fa-facebook-square"></i> Facebook</a>
+        <a
+                id="profile-link"
+                href="https://github.com/davejenej"
+                target="_blank"
+                class="btn contact-details"
+        ><i class="fab fa-github"></i> GitHub</a>
+        <a
+                href="https://twitter.com/davejenej"
+                target="_blank"
+                class="btn contact-details"
+        ><i class="fab fa-twitter"></i> Twitter</a>
+    </div>
+</section>
+
 <footer>
-    <a href="https://github.com/your-username" id="profile-link" target="_blank">Visit my GitHub profile</a>
+    <p>This page and most of the links are not real.</p>
 </footer>
+
 </body>
 </html>
