--- a/freecodecamp/personalportfolio/index.html
+++ b/freecodecamp/personalportfolio/index.html
@@ -32,7 +32,7 @@
     <div class="project-tile">
         <h3>Project 2 - Mafia webpage</h3>
         <p>Webpage about Czech Mafia 2 videogame.</p>
-        <a href="davejenej.github.io/projekt2/">View Project</a>
+        <a href="https://davejenej.github.io/projekt2/">View Project</a>
     </div>
     <div class="project-tile">
         <h3>To Do list</h3>
